@@ -4,7 +4,6 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -518,7 +517,7 @@ public enum DatabaseProduct {
 			for (String line : lines) {
 				if (line.startsWith(name() + "=")) {
 					String s = line.substring(line.indexOf("=") + 1);
-					return Arrays.asList(s.split("\\s*,\\s*"));
+					return List.of(s.split("\\s*,\\s*"));
 				}
 			}
 		}
