@@ -66,9 +66,9 @@ public class SocialCreditIdentifierValidator implements ConstraintValidator<Soci
 		return i < 10 ? (char) (i + '0') : characters.charAt(i - 10);
 	}
 
-	private static final List<String> provinces = Arrays.asList(new String[] { "11", "12", "13", "14", "15", "21", "22",
-			"23", "31", "32", "33", "34", "35", "36", "37", "41", "42", "43", "44", "45", "46", "50", "51", "52", "53",
-			"54", "61", "62", "63", "64", "65", "71", "81", "82", "91" });
+	private static final List<String> provinces = List.of(new String[] { "11", "12", "13", "14", "15", "21", "22", "23",
+			"31", "32", "33", "34", "35", "36", "37", "41", "42", "43", "44", "45", "46", "50", "51", "52", "53", "54",
+			"61", "62", "63", "64", "65", "71", "81", "82", "91" });
 
 	private static final int[] power = { 1, 3, 9, 27, 19, 26, 16, 17, 20, 29, 25, 13, 8, 24, 10, 30, 28 };
 
